package edu.hitsz.prop;

public interface BombObserver {
    void update();
}
