@startuml
'https://plantuml.com/class-diagram
title 观察者模式

interface BombObserver {
    + {abstract} update() : void
}

abstract class Game {
    - background:BufferedImage
    - shakeOffsetX:int
    - shakeOffsetY:int
    - shakeDuration:int
    - SHAKE_INTENSITY:int
    - enemyMaxNumber:int
    - scoreThreshold:int
    - eliteProb:double
    - cycleDurationEnemyShoot:int
    - isBossExisting:boolean
    - bossKillCount:int
    - backGroundTop:int
    - executorService:ScheduledExecutorService
    - timeInterval:int
    - heroAircraft:HeroAircraft
    - enemyAircrafts:List<EnemyAircraft>
    - heroBullets:List<BaseBullet>
    - enemyBullets:List<BaseBullet>
    - props:List<AbstractProp>
    - score:int
    - time:int
    - cycleDuration:int
    - cycleTime:int
    - cycleDurationEnemyGenerate:int
    - cycleTimeEnemyGenerate:int
    - cycleTimeEnemyShoot:int
    - onGameOver:Runnable
    - staticScore:int
    + Game(onGameOver : Runnable)
    # {abstract} setInitialParameters():void
    # {abstract} increaseDifficultyOverTime():void
    # {abstract} spawnBossIfRequired():void
    + spawnEnemy():EnemyAircraft
    + action():void
    - crashCheckAction():void
    - postProcessAction():void
    + paint(Graphic g):void
    - updateShake():void
    - shakeScreen(int durationInMs):void
    - drawBossHealthBar(Graphic g):void
    - drawExperienceBar(Graphics g):void
    - paintImageWithPositionRevised(Graphics g, List<? extends AbstractFlyingObject> objects):void
    - paintScoreAndLife(Graphics g):void
    - shootActionEnemy():void
    + registerEnemy(EnemyAircraft enemy):void
    + getTime():int
    + getScore():int
    + getEnemyAircrafts():List<EnemyAircraft>
    + getEnemyMaxNumber():int
    + setEnemyMaxNumber(int enemyMaxNumber):void
    + getScoreThreshold():int
    + setScoreThreshold():void
    + getEliteProb():double
    + setEliteProb(double eliteProb):void
    + getCycleDurationEnemyShoot():int
    + setCycleDurationEnemyShoot(int cycleDurationEnemyShoot):void
    + getCycleDurationEnemyGenerate():int
    + setCycleDurationEnemyGenerate(int cycleDurationEnemyGenerate):void
    + isBossExisting():boolean
    + setBossExisting(b : boolean):void
    + getBossKillCount():int
    + setBackground(BufferedImage background):void
    + {static} getStaticScore:int
    - timeCountAndNewCycleJudge():boolean
    - timeCountAndNewCycleJudgeEnemyGenerate():boolean
    - timeCountAndNewCycleJudgeEnemyShoot():boolean
    - shootActionHero():void
    - bulletsMoveAction():void
    - aircraftsMoveAction():void
}

class BombSupply {
    + {static} observers:List<BombObserver>
    + {static} registerObserver(BombObserver s):void
    + {static} removeObserve(BombObserver s):void
    - notifyObservers():void
    + BombSupply(int x, int y, int speedY)
    + activate(HeroAircraft hero):void
}
AbstractProp <|-- BombSupply

abstract class AbstractAircraft {
	# maxHp:int
    # hp:int
    # direction:int
    # shootNum:int
    # power:int
    # shootStrategy:ShootStrategy
    + AbstractAircraft(int locationX, int locationY, int speedX, int speedY, int hp)
    + decreaseHp(int decrease):void
    + getHp():int
    + {abstract} shoot():List<BaseBullet>
    + getShootNum():int
    + update():void
    + getMaxHp():int
    + shoot():List<BaseBullet>
    + getDirection():int
    + getPower():int
 }

AbstractAircraft ..|> BombObserver

class EnemyAircraft {
    + EnemyAircraft(locationX:int, locationY:int, speedX:int, speedY:int, hp:int, strategy:ShootStrategy)
    + forward():void
    + getScore():int
    + getProps():List<AbstractProp>
    + setHp(hp:int):void
    + setMaxHp(maxHp:int):void
}

class BossEnemy {
    - score:int
    + EliteEnemy(int locationX, int locationY, int speedX, int speedY, int hp)
    + shoot():List<BaseBullet>
    + getScore():int
    + update():void
    + getProps():List<AbstractProp>
}

class EliteEnemy {
    - score:int
    + EliteEnemy(int locationX, int locationY, int speedX, int speedY, int hp)
    + shoot():List<BaseBullet>
    + getScore():int
    + getProps():List<AbstractProp>
}

class ElitePlusEnemy {
    - score:int
    + EliteEnemy(int locationX, int locationY, int speedX, int speedY, int hp)
    + shoot():List<BaseBullet>
    + getScore():int
    + update():void
    + getProps():List<AbstractProp>
}

EnemyAircraft <|-- EliteEnemy
EnemyAircraft <|-- ElitePlusEnemy
EnemyAircraft <|-- BossEnemy
EnemyAircraft --|> AbstractAircraft


class HeroAircraft {
    - level:int
    - exp:int
    - expToNextLevel:int
    - fireTimer:ScheduledFuture<?>
    - {static} scheduler:ScheduledExecutorService
    - animationIndex:int
    - animationCounter:int
    - shootNum:int
    - power:int
    - direction:int
    - {static} instance: HeroAircraft
    - HeroAircraft(int locationX, int locationY, int speedX, int speedY, int hp)
    + updateAnimation():void
    + getFireImage():BufferdImage
    + activateFire(int level, long durationMs):void
    + update():void
    + resetStatus():void
    - levelUp():void
    + getLevel():int
    + getExp():int
    + getExpToNextLevel():int
    + {static} getInstance():HeroAircraft
    + forward():void
    + shoot():List<BaseBullet>
    + increaseHp(int increase):void
}

HeroAircraft --|> AbstractAircraft

class BaseBullet {
    - power:int
    + update():void
    + BaseBullet(int locationX, int locationY, int speedX, int speedY, int power)
    + forward():void
    + getPower():int
}

BaseBullet ..|> BombObserver

abstract class AbstractProp {
    + AbstractProp(int locationX, int locationY, int speedX, int speedY)
    + forward():void
    + {abstract} activate(HeroAircraft hero)
}


Game ..> AbstractAircraft
Game ..> HeroAircraft
Game ..> BaseBullet
Game ..> BombSupply

BombSupply o--> BombObserver

@enduml